--- a/userupload.html
+++ b/userupload.html
@@ -1,11 +1,10 @@
-<meta http-equiv="refresh" content="0; url=https://my.hidrive.com/share/tdkfvwpjpj">
-        <script type="text/javascript">
-            window.location.href = "https://my.hidrive.com/share/tdkfvwpjpj"
-        </script>
-        <title>Homepage</title>
+<meta http-equiv="refresh" content="0; url=https://my.hidrive.com/share/77uo-p57nb#$/">
+<!--<meta http-equiv="refresh" content="0; url=https://my.hidrive.com/share/tdkfvwpjpj">-->
+        <!--<script type="text/javascript">window.location.href = "https://my.hidrive.com/share/tdkfvwpjpj"</script>-->
+        <title>Userupload</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://my.hidrive.com/share/tdkfvwpjpj'>-</a>.
+        <!--If you are not redirected automatically, follow this <a href='https://my.hidrive.com/share/tdkfvwpjpj'>-</a>.-->
     </body>
 </html>
