--- a/ygosetlistfetch.html
+++ b/ygosetlistfetch.html
@@ -1,11 +1,11 @@
-<meta http-equiv="refresh" content="0; https://alcea-wisteria.de/PHP//0demo/2023-10-08-Fetch-yugioh-wikia-set-list/setlistfetch-noimages.php">
+<meta http-equiv="refresh" content="0; https://alcea-wisteria.de/PHP//0demo/2023-10-08-Fetch-yugioh-wikia-set-list/setlistfetch.php#noimages">
     <script type="text/javascript">
-        window.location.href = "https://alcea-wisteria.de/PHP//0demo/2023-10-08-Fetch-yugioh-wikia-set-list/setlistfetch-noimages.php"
+        window.location.href = "https://alcea-wisteria.de/PHP//0demo/2023-10-08-Fetch-yugioh-wikia-set-list/setlistfetch.php#noimages"
     </script>
     <title>Homepage</title>
 </head>
 <body>
     <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-    If you are not redirected automatically, follow this <a href='https://alcea-wisteria.de/PHP//0demo/2023-10-08-Fetch-yugioh-wikia-set-list/setlistfetch-noimages.php'>-</a>.
+    If you are not redirected automatically, follow this <a href='https://alcea-wisteria.de/PHP//0demo/2023-10-08-Fetch-yugioh-wikia-set-list/setlistfetch.php#noimages'>-</a>.
 </body>
 </html>
