--- a/ytsearch.html
+++ b/ytsearch.html
@@ -4,10 +4,10 @@
 
 
 
-<a target="_blank" href="https://ry3yr.github.io/yt" style=color:gray>YT Link Relay</a><br>
-<a target="_blank" href="https://ry3yr.github.io/ytsearch">YT General Search</a><br>
+<a target="_blank" href="yt.html" style=color:gray>YT Link Relay</a><br>
+<a target="_blank" href="ytsearch.html">YT General Search</a><br>
 <a target="_blank" href="https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/ytchannelsearch-dkpr.html">YTChannel Search</a><br>
-<a target="_blank" href="https://ry3yr.github.io/ytstudio">YTStudio Overview</a><br>
+<a target="_blank" href="ytstudio.html">YTStudio Overview</a><br>
 <a target="_blank" href="ytplaylists.html" style=color:blue>ytplaylists</a> <=> <a target="_blank" href="https://ry3yr.github.io/ytplaylistinfofetch">YTPL Info</a><br>
 
 <!DOCTYPE html>
